--- a/fabric-kube/samples/scaled-raft-tls-privi/configtx.yaml
+++ b/fabric-kube/samples/scaled-raft-tls-privi/configtx.yaml
@@ -1,122 +1,292 @@
-Orderer:
-    OrdererType: kafka
-    Addresses:
-      &a9
-        - orderer0.cache.com:7050
-        - orderer1.cache.com:7050
-        - orderer2.cache.com:7050
-        - orderer3.cache.com:7050
-        - orderer4.cache.com:7050
-    BatchTimeout: 2s
-    BatchSize:
-      &a10
-        MaxMessageCount: 100
-        AbsoluteMaxBytes: 90 MB
-        PreferredMaxBytes: 2 MB
-    Kafka:
-      &a11
-        Brokers: []
-    Organizations:
-      &a12
-        - &a6
-            Name: OrdererOrg
-            ID: OrdererMSP
-            MSPDir: crypto-config/ordererOrganizations/cache.com/msp
-Capabilities:
-    Channel:
-      &a2
-        V1_4_3: true
-        V1_3: false
-        V1_1: false
-    Orderer:
-      &a7
-        V1_4_2: true
-        V1_1: false
-    Application:
-      &a1
-        V1_4_2: true
-        V1_3: false
-        V1_2: false
-        V1_1: false
-Application:
-  &a14
-    Organizations: {}
-    Capabilities: *a1
-Channel:
-    Capabilities: *a2
+
+---
+################################################################################
+#
+#   Section: Organizations
+#
+#   - This section defines the different organizational identities which will
+#   be referenced later in the configuration.
+#
+################################################################################
 Organizations:
-    - &a13
-        Name: OrdererOrg
-        ID: OrdererMSP
-        MSPDir: crypto-config/ordererOrganizations/cache.com/msp
-    - &a4
+
+    - &privi
         Name: priviMSP
+
+        # ID to load the MSP definition as
         ID: priviMSP
-        MSPDir: crypto-config/peerOrganizations/privi.com/msp
+
+        # MSPDir is the filesystem path which contains the MSP configuration
+        MSPDir: crypto-config/ordererOrganizations/privi.com/msp
+
+        # Policies defines the set of policies at this level of the config tree
+        # For organization policies, their canonical path is usually
+        #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
+        Policies:
+            Readers:
+                Type: Signature
+                Rule: "OR('priviMSP.member', 'priviMSP.admin', 'priviMSP.peer', 'priviMSP.client')"
+            Writers:
+                Type: Signature
+                Rule: "OR('priviMSP.member', 'priviMSP.admin', 'priviMSP.client')"
+            Admins:
+                Type: Signature
+                Rule: "OR('priviMSP.admin')"
+
         AnchorPeers:
             - Host: peer0.privi.com
               Port: 7051
+
+################################################################################
+#
+#   SECTION: Capabilities
+#
+#   - This section defines the capabilities of fabric network. This is a new
+#   concept as of v1.1.0 and should not be utilized in mixed networks with
+#   v1.0.x peers and orderers.  Capabilities define features which must be
+#   present in a fabric binary for that binary to safely participate in the
+#   fabric network.  For instance, if a new MSP type is added, newer binaries
+#   might recognize and validate the signatures from this type, while older
+#   binaries without this support would be unable to validate those
+#   transactions.  This could lead to different versions of the fabric binaries
+#   having different world states.  Instead, defining a capability for a channel
+#   informs those binaries without this capability that they must cease
+#   processing transactions until they have been upgraded.  For v1.0.x if any
+#   capabilities are defined (including a map with all capabilities turned off)
+#   then the v1.0.x peer will deliberately crash.
+#
+################################################################################
+Capabilities:
+    # Channel capabilities apply to both the orderers and the peers and must be
+    # supported by both.
+    # Set the value of the capability to true to require it.
+    Channel: &ChannelCapabilities
+        # V1.4.2 for Channel is a catchall flag for behavior which has been
+        # determined to be desired for all orderers and peers running at the v1.4.2
+        # level, but which would be incompatible with orderers and peers from
+        # prior releases.
+        # Prior to enabling V1.4.2 channel capabilities, ensure that all
+        # orderers and peers on a channel are at v1.4.2 or later.
+        V1_4_3: true
+    # Orderer capabilities apply ocomy to the orderers, and may be safely
+    # manipulated without concern for upgrading peers.  Set the value of the
+    # capability to true to require it.
+    Orderer: &OrdererCapabilities
+        # V1.1 for Order is a catchall flag for behavior which has been
+        # determined to be desired for all orderers running v1.0.x, but the
+        # modification of which  would cause incompatibilities.  Users should
+        # leave this flag set to true.
+        V1_4_2: true
+
+    # Application capabilities apply ocomy to the peer network, and may be safely
+    # manipulated without concern for upgrading orderers.  Set the value of the
+    # capability to true to require it.
+    Application: &ApplicationCapabilities
+        # V1.2 for Application is a catchall flag for behavior which has been
+        # determined to be desired for all peers running v1.0.x, but the
+        # modification of which would cause incompatibilities.  Users should
+        # leave this flag set to true.
+        V1_4_2: true
+
+################################################################################
+#
+#   SECTION: Application
+#
+#   - This section defines the values to encode into a config transaction or
+#   genesis block for application related parameters
+#
+################################################################################
+Application: &ApplicationDefaults
+
+    # Organizations is the list of orgs which are defined as participants on
+    # the application side of the network
+    Organizations:
+
+    # Policies defines the set of policies at this level of the config tree
+    # For Application policies, their canonical path is
+    #   /Channel/Application/<PolicyName>
+    Policies:
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+
+    # Capabilities describes the application level capabilities, see the
+    # dedicated Capabilities section elsewhere in this file for a full
+    # description
+    Capabilities:
+        <<: *ApplicationCapabilities
+
+################################################################################
+#
+#   SECTION: Orderer
+#
+#   - This section defines the values to encode into a config transaction or
+#   genesis block for orderer related parameters
+#
+################################################################################
+Orderer: &OrdererDefaults
+
+    # Orderer Type: The orderer implementation to start
+    # Available types are "solo", "kafka" and "etcdraft"
+    OrdererType: etcdraft
+
+    Addresses:
+        - orderer0.privi.com:7050
+        - orderer1.privi.com:7050
+        - orderer2.privi.com:7050
+
+    # Batch Timeout: The amount of time to wait before creating a batch
+    BatchTimeout: 1s
+
+    # Batch Size: Controls the number of messages batched into a block
+    BatchSize:
+
+        # Max Message Count: The maximum number of messages to permit in a batch
+        MaxMessageCount: 5
+
+        # Absolute Max Bytes: The absolute maximum number of bytes allowed for
+        # the serialized messages in a batch.
+        AbsoluteMaxBytes: 98 MB
+
+        # Preferred Max Bytes: The preferred maximum number of bytes allowed for
+        # the serialized messages in a batch. A message larger than the preferred
+        # max bytes will result in a batch larger than preferred max bytes.
+        PreferredMaxBytes: 1024 KB
+
+    EtcdRaft:
+        Consenters:
+            - Host: orderer0.privi.com
+              Port: 7050
+              ClientTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer0.privi.com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer0.privi.com/tls/server.crt
+            - Host: orderer1.privi.com
+              Port: 7050
+              ClientTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer1.privi.com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer1.privi.com/tls/server.crt
+            - Host: orderer2.privi.com
+              Port: 7050
+              ClientTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer2.privi.com/tls/server.crt
+              ServerTLSCert: crypto-config/ordererOrganizations/privi.com/orderers/orderer2.privi.com/tls/server.crt
+
+        # Options to be specified for all the etcd/raft nodes. The values here
+        # are the defaults for all new channels and can be modified on a
+        # per-channel basis via configuration updates.
+        Options:
+            # TickInterval is the time interval between two Node.Tick invocations.
+            TickInterval: 500ms
+
+            # ElectionTick is the number of Node.Tick invocations that must pass
+            # between elections. That is, if a follower does not receive any
+            # message from the leader of current term before ElectionTick has
+            # elapsed, it will become candidate and start an election.
+            # ElectionTick must be greater than HeartbeatTick.
+            ElectionTick: 10
+
+            # HeartbeatTick is the number of Node.Tick invocations that must
+            # pass between heartbeats. That is, a leader sends heartbeat
+            # messages to maintain its leadership every HeartbeatTick ticks.
+            HeartbeatTick: 1
+
+            # MaxInflightBlocks limits the max number of in-flight append messages
+            # during optimistic replication phase.
+            MaxInflightBlocks: 5
+
+            # SnapshotIntervalSize defines number of bytes per which a snapshot is taken
+            SnapshotIntervalSize: 20 MB
+
+    # Organizations is the list of orgs which are defined as participants on
+    # the orderer side of the network
+    Organizations:
+
+    # Policies defines the set of policies at this level of the config tree
+    # For Orderer policies, their canonical path is
+    #   /Channel/Orderer/<PolicyName>
+    Policies:
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+        # BlockValidation specifies what signatures must be included in the block
+        # from the orderer for the peer to validate it.
+        BlockValidation:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+
+    # Capabilities describes the orderer level capabilities, see the
+    # dedicated Capabilities section elsewhere in this file for a full
+    # description
+    Capabilities:
+        <<: *OrdererCapabilities
+
+################################################################################
+#
+#   CHANNEL
+#
+#   This section defines the values to encode into a config transaction or
+#   genesis block for channel related parameters.
+#
+################################################################################
+Channel: &ChannelDefaults
+    # Policies defines the set of policies at this level of the config tree
+    # For Channel policies, their canonical path is
+    #   /Channel/<PolicyName>
+    Policies:
+        # Who may invoke the 'Deliver' API
+        Readers:
+            Type: ImplicitMeta
+            Rule: "ANY Readers"
+        # Who may invoke the 'Broadcast' API
+        Writers:
+            Type: ImplicitMeta
+            Rule: "ANY Writers"
+        # By default, who may modify elements at this config level
+        Admins:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Admins"
+
+    # Capabilities describes the channel level capabilities, see the
+    # dedicated Capabilities section elsewhere in this file for a full
+    # description
+    Capabilities:
+        <<: *ChannelCapabilities
+
+################################################################################
+#
+#   Profile
+#
+#   - Different configuration profiles may be encoded here to be specified
+#   as parameters to the configtxgen tool
+#
+################################################################################
 Profiles:
+
+    OrdererGenesis:
+        <<: *ChannelDefaults
+        Orderer:
+            <<: *OrdererDefaults
+            Organizations:
+                - *privi
+
+        Consortiums:
+            TheConsortium:
+                Organizations:
+                    - *privi
+
     broadcast:
-        Consortium: AutoblockConsortium
+        Consortium: TheConsortium
+        <<: *ChannelDefaults
         Application:
+            <<: *ApplicationDefaults
             Organizations:
-              &a8
-                - *a4
-    DevModeKafka:
-        Capabilities: *a2
-        Orderer:
-            OrdererType: kafka
-            Addresses: *a9
-            BatchTimeout: 2s
-            BatchSize: *a10
-            Kafka: *a11
-            Organizations: *a12
-            Capabilities: *a7
-        Application:
-            Organizations:
-                - *a13
-            Capabilities: *a1
-        Consortiums:
-            AutoblockConsortium:
-                Organizations: *a8
-    MultiNodeEtcdRaft:
-        Capabilities:
-            V1_4_3: true
-            V1_3: false
-            V1_1: false
-        Orderer:
-            OrdererType: etcdraft
-            Addresses: *a9
-            BatchTimeout: 2s
-            BatchSize: *a10
-            Kafka: *a11
-            Organizations:
-                - *a13
-            EtcdRaft:
-                Consenters:
-                    - Host: orderer0.cache.com
-                      Port: 7050
-                      ClientTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer0.cache.com/tls/server.crt
-                      ServerTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer0.cache.com/tls/server.crt
-                    - Host: orderer1.cache.com
-                      Port: 7050
-                      ClientTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer1.cache.com/tls/server.crt
-                      ServerTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer1.cache.com/tls/server.crt
-                    - Host: orderer2.cache.com
-                      Port: 7050
-                      ClientTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer2.cache.com/tls/server.crt
-                      ServerTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer2.cache.com/tls/server.crt
-                    - Host: orderer3.cache.com
-                      Port: 7050
-                      ClientTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer3.cache.com/tls/server.crt
-                      ServerTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer3.cache.com/tls/server.crt
-                    - Host: orderer4.cache.com
-                      Port: 7050
-                      ClientTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer4.cache.com/tls/server.crt
-                      ServerTLSCert: crypto-config/ordererOrganizations/cache.com/orderers/orderer4.cache.com/tls/server.crt
-            Capabilities: *a7
-        Application: *a14
-        Consortiums:
-            AutoblockConsortium:
-                Organizations: *a8
+                - *privi
