--- a/fabric-kube/samples/scaled-raft-tls-privi/network.yaml
+++ b/fabric-kube/samples/scaled-raft-tls-privi/network.yaml
@@ -3,7 +3,7 @@ useActualDomains: true
 
 network:
   # used by init script to create genesis block and by peer-org-flow to parse consortiums
-  genesisProfile: MultiNodeEtcdRaft
+  genesisProfile: OrdererGenesis
   # used by init script to create genesis block 
   systemChannelID: testchainid
 
