--- a/fabric-kube/chaincode-flow/values.yaml
+++ b/fabric-kube/chaincode-flow/values.yaml
@@ -48,7 +48,7 @@ flow:
   invoke:
     # should we run invoke step? 
     # we invoke chaincode after instantiate/upgrade to force the peers to actually create the chaincode containers
-    enabled: true 
+    enabled: false
     parallel: true
     function: '{"function":"ping","Args":[""]}'
 
